<resources>
    <string name="app_name">PotensiTuitionApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone_num">Contact Number</string>
    <string name="students">All Students</string>
    <string name="login_success">Successfully Login!</string>
    <string name="login_failed">Invalid username or password!</string>
    <string name="logout_button">Logout</string>
    <string name="logout_success">Successfully logged out!</string>
    <string name="stud_id">Student ID</string>
    <string name="timetable">Time Table</string>
</resources>
